added multiple image

--- a/src/app/view/venues-add/venues-add.component.html
+++ b/src/app/view/venues-add/venues-add.component.html
@@ -1,5 +1,5 @@
-<section id="main" class="clearfix">
-  <div class="wrap row">
+<section id="main" class="clearfix" jstcache="0">
+  <div class="wrap row" jstcache="0">
     <div class="breadcrumb breadcrumbs columns">
      <div class="breadcrumb-trail">
       <span class="trail-begin">
