--- a/src/app/view/event/event.component.html
+++ b/src/app/view/event/event.component.html
@@ -233,7 +233,8 @@
                             <form method="get" id="searchform" action="">
                                 <input type="hidden" class="miles_range_post_type" name="post_type" value="event">
                                 <div class="search_range">
-                                    <input type="text" name="range_address" id="range_address" value="" class="range_address location placeholder ui-autocomplete-input" placeholder="Enter your Postal Code" autocomplete="off">
+                                    <input style="width: 85%" type="text" name="range_address" id="range_address" value="" class="range_address location placeholder ui-autocomplete-input" placeholder="Enter your Postal Code" autocomplete="off">
+                                    <a class="btn btn-default btn-sm btn-square active pull-right add_button"><span class="glyphicon glyphicon-search" area-hidden="true"></span> </a>
                                     
                                     <label>Mile range:</label>
                                     <input type="text" name="radius" id="radius_range" value="500" style="border:0; font-weight:bold;" readonly="readonly">
